--- a/templates/map.html
+++ b/templates/map.html
@@ -15,14 +15,15 @@
 	<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
 	  <!-- Leaflet CSS -->
 	  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
-	<link href="style.css" rel="stylesheet">
+	  <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
+	<!-- <link href="style.css" rel="stylesheet"> -->
 </head>
 <body>
 
 <!-- Navigation -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-	<a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
+	<a class="navbar-brand" href="index.html"><img src="static/img/logo.png"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 	  <span class="navbar-toggler-icon"></span>
 	</button>
@@ -64,10 +65,10 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
 
   <!-- API Key -->
-  <script type="text/javascript" src="/js/config.js"></script>
+  <script type="text/javascript" src="static/js/config.js"></script>
 
   <!-- Our JavaScript -->
-  <script type="text/javascript" src="/js/map.js"></script>
+  <script type="text/javascript" src="static/js/map.js"></script>
   
 
 <!--- Footer -->
