--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
 	data-auto-a11y="true"
   ></script>
 	<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
-	<link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
-	<!-- <link href="style.css" rel="stylesheet"> -->
+	<!-- <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> -->
+	<link href="static/style.css" rel="stylesheet">
 </head>
 <body>
 
