--- a/templates/map.html
+++ b/templates/map.html
@@ -15,8 +15,8 @@
 	<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
 	  <!-- Leaflet CSS -->
 	  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
-	  <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
-	<!-- <link href="style.css" rel="stylesheet"> -->
+	  <!-- <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> -->
+	<link href="static/style.css" rel="stylesheet">
 </head>
 <body>
 
