--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
   ></script>
 	<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
 	<!-- <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> -->
-	<link href="static/style.css" rel="stylesheet">
+	<link href="../static/style.css" rel="stylesheet">
 </head>
 <body>
 
