--- a/templates/map.html
+++ b/templates/map.html
@@ -16,7 +16,7 @@
 	  <!-- Leaflet CSS -->
 	  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
 	  <!-- <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> -->
-	<link href="static/style.css" rel="stylesheet">
+	<link href="../static/style.css" rel="stylesheet">
 </head>
 <body>
 
