--- a/templates/index.html
+++ b/templates/index.html
@@ -32,20 +32,20 @@
 				Visualisations
 			  </a>
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-				<a class="dropdown-item" href="visualisations.html">Max Temperature</a>
-				<a class="dropdown-item" href="visualisations.html">Humidity</a>
-				<a class="dropdown-item" href="visualisations.html">Cloudiness</a>
-				<a class="dropdown-item" href="visualisations.html">Wind Speed</a>
+				<a class="dropdown-item" href="visualisations">Max Temperature</a>
+				<a class="dropdown-item" href="visualisations">Humidity</a>
+				<a class="dropdown-item" href="visualisations">Cloudiness</a>
+				<a class="dropdown-item" href="visualisations">Wind Speed</a>
 			  </div>
 		  </li>
 		<li class="nav-item">
-		  <a class="nav-link" href="map.html">Map</a>
+		  <a class="nav-link" href="map">Map</a>	
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="sources.html">Sources</a>
+		  <a class="nav-link" href="sources">Sources</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="about.html">About</a>
+			<a class="nav-link" href="about">About</a>
 		  </li>
   
 	  </ul>
@@ -63,7 +63,7 @@
 	</ol>
 	<div class="carousel-inner" href="#carouselExampleIndicators">
 	  <div class="carousel-item active">
-		<a href="/map.html" target="_self">
+		<a href="/map" target="_self">
 		<img class="d-block w-100" src="static/img/map.png" alt="First slide">
 		<div class="carousel-caption d-none d-md-block">
 			<h5>Interactive Map</h5>
@@ -72,7 +72,7 @@
 		  </div>
 	  </div>
 	  <div class="carousel-item">
-		<a href="/visualisations.html" target="_self">
+		<a href="/visualisations" target="_self">
 		<img class="d-block w-100" src="static/img/map.png" alt="Second slide">
 		<div class="carousel-caption d-none d-md-block">
 			<h5>Fun Plots</h5>
@@ -81,7 +81,7 @@
 		  </div>
 	  </div>
 	  <div class="carousel-item">
-		<a href="/about.html" target="_self">
+		<a href="/about" target="_self">
 		<img class="d-block w-100" src="static/img/map.png" alt="Third slide">
 		<div class="carousel-caption d-none d-md-block">
 			<h5>About</h5>
