--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 <!-- Navigation -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-	<a class="navbar-brand" href="index.html"><img src="static/img/logo.png"></a>
+	<a class="navbar-brand" href="/"><img src="static/img/logo.png"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 	  <span class="navbar-toggler-icon"></span>
 	</button>
@@ -32,20 +32,20 @@
 				Visualisations
 			  </a>
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-				<a class="dropdown-item" href="visualisations">Max Temperature</a>
-				<a class="dropdown-item" href="visualisations">Humidity</a>
-				<a class="dropdown-item" href="visualisations">Cloudiness</a>
-				<a class="dropdown-item" href="visualisations">Wind Speed</a>
+				<a class="dropdown-item" href="visualisations.html">Max Temperature</a>
+				<a class="dropdown-item" href="visualisations.html">Humidity</a>
+				<a class="dropdown-item" href="visualisations.html">Cloudiness</a>
+				<a class="dropdown-item" href="visualisations.html">Wind Speed</a>
 			  </div>
 		  </li>
 		<li class="nav-item">
-		  <a class="nav-link" href="map">Map</a>	
+		  <a class="nav-link" href="map.html">Map</a>	
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="sources">Sources</a>
+		  <a class="nav-link" href="sources.html">Sources</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="about">About</a>
+			<a class="nav-link" href="about.html">About</a>
 		  </li>
   
 	  </ul>
@@ -63,7 +63,7 @@
 	</ol>
 	<div class="carousel-inner" href="#carouselExampleIndicators">
 	  <div class="carousel-item active">
-		<a href="/map" target="_self">
+		<a href="/map.html" target="_self">
 		<img class="d-block w-100" src="static/img/map.png" alt="First slide">
 		<div class="carousel-caption d-none d-md-block">
 			<h5>Interactive Map</h5>
