--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,9 @@
 		<li class="nav-item">
 			<a class="nav-link" href="about.html">About</a>
 		  </li>
-  
+		  <script type="text/javascript" src="../static/js/Plankton.js"></script>
+		  <script type="text/javascript" src="../static/js/leaflet-heat.js"></script>
+		  <script type="text/javascript" src="../static/js/config.js"></script>
 	  </ul>
 	</div>
   </nav>
