--- a/templates/map.html
+++ b/templates/map.html
@@ -70,7 +70,10 @@
   <!-- Our JavaScript -->
   <script type="text/javascript" src="static/js/map.js"></script>
   
-
+  <!-- JS -->
+  <script type="text/javascript" src="static/js/Plankton.js"></script>
+	<!-- Leaflet heatmap plugin-->
+	<script type="text/javascript" src="static/js/leaflet-heat.js"></script>
 <!--- Footer -->
 <footer class="page-footer font-small blue">
 
