--- a/templates/index.html
+++ b/templates/index.html
@@ -5,21 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Welcome to Phyto Data App</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script
-	src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
-	data-auto-a11y="true"
-  ></script>
-	<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
+
 	<!-- <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> -->
 	<link href="../static/style.css" rel="stylesheet">
 </head>
 <body>
 
 <!-- Navigation -->
-
+<!-- <div id="map"></div> -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
 	<a class="navbar-brand" href="/"><img src="static/img/logo.png"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,9 +40,6 @@
 		<li class="nav-item">
 			<a class="nav-link" href="about.html">About</a>
 		  </li>
-		  <script type="text/javascript" src="../static/js/Plankton.js"></script>
-		  <script type="text/javascript" src="../static/js/leaflet-heat.js"></script>
-		  <script type="text/javascript" src="../static/js/config.js"></script>
 	  </ul>
 	</div>
   </nav>
@@ -207,6 +197,29 @@
 	<!-- Copyright -->
   
   </footer>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <!-- Leaflet JS -->
+	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+	integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+	crossorigin=""></script>
+  <!-- D3 CDN -->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+	<!-- Leaflet heatmap plugin-->
+  <script type="text/javascript" src="../static/js/leaflet-heat.js"></script>
+  <!-- API key -->
+  <script type="text/javascript" src="../static/js/config.js"></script>
+  <!-- JS -->
+  <script type="text/javascript" src="../static/js/Plankton.js"></script>
+
+
+  <script
+  src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
+  data-auto-a11y="true"
+></script>
+  <!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
 
 
 </body>
