--- a/templates/visualisations.html
+++ b/templates/visualisations.html
@@ -81,6 +81,18 @@
   
   </footer>
 
+<!-- API key -->
+<script type="text/javascript" src="static/js/config.js"></script>
+
+<!-- Leaflet JS -->
+<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+crossorigin=""></script>
+<!-- D3 CDN -->
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<!-- JS -->
+<script type="text/javascript" src="static/js/Plankton.js"></script>
+
 
 </body>
 </html>
