--- a/templates/map.html
+++ b/templates/map.html
@@ -5,13 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Map - Phyto Data App</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script
-	src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
-	data-auto-a11y="true"
-  ></script>
+
 	<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
 	  <!-- Leaflet CSS -->
 	  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
@@ -58,6 +52,23 @@
 <!-- The div that holds our map -->
 <div id="map"></div>
 
+<!--- Footer -->
+<footer class="page-footer font-small blue">
+
+	<!-- Copyright -->
+	<div class="footer-copyright text-center py-3">UWA Data Analytics Bootcamp 2021</div>
+	<!-- Copyright -->
+  
+  </footer>
+
+<!-- JavaScript Libraries -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script
+src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
+data-auto-a11y="true"
+></script>
   <!-- Leaflet JavaScript -->
   <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
   <!-- D3 JavaScript -->
@@ -74,15 +85,6 @@
   <script type="text/javascript" src="static/js/Plankton.js"></script>
 	<!-- Leaflet heatmap plugin-->
 	<script type="text/javascript" src="static/js/leaflet-heat.js"></script>
-<!--- Footer -->
-<footer class="page-footer font-small blue">
-
-	<!-- Copyright -->
-	<div class="footer-copyright text-center py-3">UWA Data Analytics Bootcamp 2021</div>
-	<!-- Copyright -->
-  
-  </footer>
-
 
 </body>
 </html>
