--- a/templates/sources.html
+++ b/templates/sources.html
@@ -5,13 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Sources - Phyto Data App</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script
-	src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
-	data-auto-a11y="true"
-  ></script>
+
 	<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
 	<!-- <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> -->
 	<link href="../static/style.css" rel="stylesheet">
@@ -81,6 +75,14 @@
   
   </footer>
 
+  <!-- Javascript Libraries -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script
+  src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
+  data-auto-a11y="true"
+></script>
   <!-- Leaflet JavaScript -->
   <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
   <!-- D3 JavaScript -->
