--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
 <!-- Navigation -->
 <!-- <div id="map"></div> -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
 	<a class="navbar-brand" href="/"><img src="static/img/logo.png"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 	  <span class="navbar-toggler-icon"></span>
@@ -56,28 +56,28 @@
 	<div class="carousel-inner" href="#carouselExampleIndicators">
 	  <div class="carousel-item active">
 		<a href="/map.html" target="_self">
-		<img class="d-block w-100" src="static/img/map.png" alt="First slide">
+		<img class="d-block w-100" src="static/img/satellite.png" alt="First slide">
 		<div class="carousel-caption d-none d-md-block">
-			<h5>Interactive Map</h5>
-			<p>Discover the Phytoplankton Distribution through an interactive map!</p>
+			<h3>Interactive Map</h3>
+			<p style="color:white">Discover the Phytoplankton Distribution through an interactive map!</p>
 		</a>
 		  </div>
 	  </div>
 	  <div class="carousel-item">
-		<a href="/visualisations" target="_self">
-		<img class="d-block w-100" src="static/img/map.png" alt="Second slide">
+		<a href="/visualisations.html" target="_self">
+		<img class="d-block w-100" src="static/img/intensity.png" alt="Second slide">
 		<div class="carousel-caption d-none d-md-block">
-			<h5>Fun Plots</h5>
-			<p>Visualise and understand our Phyto Data with our amazing Plots!</p>
+			<h3>Fun Plots</h3>
+			<p style="color:white">Visualise and understand our Phyto Data with our amazing Plots!</p>
 		</a>
 		  </div>
 	  </div>
 	  <div class="carousel-item">
 		<a href="/about" target="_self">
-		<img class="d-block w-100" src="static/img/map.png" alt="Third slide">
+		<img class="d-block w-100" src="static/img/bloom.png" alt="Third slide">
 		<div class="carousel-caption d-none d-md-block">
-			<h5>About</h5>
-			<p>Meet our Team and our mission!</p>
+			<h3>About</h3>
+			<p style="color:white">Meet our Team and our mission!</p>
 		</a>
 		  </div>
 	  </div>
@@ -199,7 +199,7 @@
   </footer>
 
   <!-- Javascript libraries  -->
-  
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
