pushin changes on the website: about, index, sources

--- a/templates/sources.html
+++ b/templates/sources.html
@@ -53,11 +53,26 @@
 	<div class="col-md-12 col-lg-6">
 		<h2>Sources</h2>
 		<br>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum orci et sapien consequat, eu cursus enim blandit. Quisque mattis eget sapien id pulvinar. Nulla vitae interdum nisl, ac lacinia dolor. Vivamus odio nibh, ullamcorper a maximus eu, fermentum quis justo. Integer elit lacus, commodo quis ante nec, cursus egestas elit. Proin imperdiet turpis massa, eget mollis mi laoreet ut. Aliquam nec iaculis magna. Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p>
-		<p>Mauris sollicitudin ante in scelerisque commodo. Fusce scelerisque ullamcorper nunc, sit amet vulputate dolor iaculis vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin bibendum diam a tincidunt volutpat. Fusce pulvinar velit erat, id euismod est mollis nec. Curabitur ultrices tortor nisi. Sed feugiat massa gravida aliquet suscipit. In luctus tellus magna, eu pellentesque urna ultrices non. Vestibulum sagittis metus arcu, et sollicitudin metus tincidunt fringilla. Etiam tincidunt quam ac placerat malesuada. Praesent vel arcu erat. Nulla at felis libero. Ut odio felis, feugiat in leo ac, consectetur ullamcorper nisl. Praesent tempor posuere bibendum. Cras nisi tellus, imperdiet eu molestie vel, dictum a erat. Fusce sodales ultricies eleifend.</p>
+		<p>After crawling the web for phytopankton data sources, we decided to focus on data provided by the <a href="https://portal.aodn.org.au/">Australian Ocean Data Network</a>.
+			It gives an open access to ocean data with very interesting parameters, like latitude and longitude, but also dates and volumes.
+		</p>
+		<p>These are very precious elements for us, as we can produce some interesting visualisations like a map and create different kind of plots.
+			It is then much more easy to read, as we are talking about thousands and thousands of data!
+		</p>
+		<p>We focused on the distribution of Phytoplankton and Zooplankton around Australia in the past ten years, using these two links:
+		</p>
+		<a href="https://portal.aodn.org.au/search?uuid=c1344979-f701-0916-e044-00144f7bc0f4">IMOS - AusCPR: Phytoplankton Abundance</a>
+		<br>
+		<a href="https://portal.aodn.org.au/search?uuid=c1344e70-480e-0993-e044-00144f7bc0f4">IMOS - AusCPR: Zooplankton Abundance</a>
+
 	</div>
 	<div class="col-lg-6">
-		<img src="static/img/plot1.png" class="img-fluid">
+		<br>
+		<br>
+		<br>
+		<a href="https://portal.aodn.org.au/" target="_self">
+			<img class="img-fluid" src="https://portal.aodn.org.au/images/AODN/AODN_logo_fullText.png" alt="Phytoplankton">
+	</a>
 	</div>
 
 </div>
@@ -103,6 +118,6 @@
 
 
 
-<!-- End View in Browser: Drew's #1 Trending YouTube Tutorial -->
+
 
 
