--- a/templates/about.html
+++ b/templates/about.html
@@ -54,16 +54,23 @@
 		<h2>About</h2>
 		<br>
 		<p>Our website is about the abundance of plankton over time across the coast of Australia.
-			Phytoplankton or “plant drifter” is a catch-all category for all the tiny aquatic organisms that can turn sunlight into food via photosynthesis.
-			While zooplankton or “animal drifter” are also an important part to the ocean ecosystem as they feed on phytoplankton then become a food source for larger predators such as fish.
-			Monitoring the plankton population over time is therefore important to sustain life in the oceans and arguably land as well. 
-			Monitoring also provides researchers and policymakers with environmental and climatic indicators, harmful algal bloom detection, eutrophication and pollution information at both local and national scales.
-			</p>
-		<p>Mauris sollicitudin ante in scelerisque commodo. Fusce scelerisque ullamcorper nunc, sit amet vulputate dolor iaculis vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin bibendum diam a tincidunt volutpat. Fusce pulvinar velit erat, id euismod est mollis nec. Curabitur ultrices tortor nisi. Sed feugiat massa gravida aliquet suscipit. In luctus tellus magna, eu pellentesque urna ultrices non. Vestibulum sagittis metus arcu, et sollicitudin metus tincidunt fringilla. Etiam tincidunt quam ac placerat malesuada. Praesent vel arcu erat. Nulla at felis libero. Ut odio felis, feugiat in leo ac, consectetur ullamcorper nisl. Praesent tempor posuere bibendum. Cras nisi tellus, imperdiet eu molestie vel, dictum a erat. Fusce sodales ultricies eleifend.</p>
-	</div>
-	<div class="col-lg-6">
-		<img src="/static/img/plot1.png" class="img-fluid">
-	</div>
+		</p>
+		<p>Phytoplankton or “plant drifter” is a catch-all category for all the tiny aquatic organisms that can turn sunlight into food via photosynthesis.
+		</p>
+		<p>While zooplankton or “animal drifter” are also an important part to the ocean ecosystem as they feed on phytoplankton then become a food source for larger predators such as fish.
+		</p>
+		<p>Monitoring the plankton population over time is therefore important to sustain life in the oceans and arguably land as well. 
+		Monitoring also provides researchers and policymakers with environmental and climatic indicators, harmful algal bloom detection, eutrophication and pollution information at both local and national scales.
+	</p>
+	
+</div>
+
+<div class="col-lg-6">
+	<br>
+	<br>
+	<br>
+	<img src="static/img/bloom.png" class="img-fluid">
+</div>
 
 </div>
 </div>
