--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
 		<img class="d-block w-100" src="static/img/bloom.png" alt="Third slide">
 		<div class="carousel-caption d-none d-md-block">
 			<h3>About</h3>
-			<p style="color:white">Meet our Team and our mission!</p>
+			<p style="color:white">About Phytoplankton...</p>
 		</a>
 		  </div>
 	  </div>
@@ -96,7 +96,9 @@
 <div class="container-fluid">
 	<div class="row jumbotron">
 		<div class="col-xs-12 col-sm-12 col-md-9 col-log-9 col-xl-10">
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum orci et sapien consequat, eu cursus enim blandit. Quisque mattis eget sapien id pulvinar. Nulla vitae interdum nisl, ac lacinia dolor. Vivamus odio nibh, ullamcorper a maximus eu, fermentum quis justo. Integer elit lacus, commodo quis ante nec, cursus egestas elit. Proin imperdiet turpis massa, eget mollis mi laoreet ut. Aliquam nec iaculis magna. Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p>
+			<p class="lead">Welcome to the wonderful world of Phytoplankton! These tiny creatures produce about 50% of the oxygen on earth.
+				On this website, you will discover their distribution around Australia! Have fun!
+			</p>
 		
 		</div>
 	</div>
@@ -165,7 +167,7 @@
 
 <hr class="my-4">
   
-<!--- Meet the team -->
+<!--- About -->
 <div class="container-fluid padding">
 	<div class="row welcome text-center">
 		<div class="col-12">
@@ -178,11 +180,20 @@
 <div class="container-fluid padding">
 	<div class="row padding">
 		<div class="col-md-12 col-lg-6">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum orci et sapien consequat, eu cursus enim blandit. Quisque mattis eget sapien id pulvinar. Nulla vitae interdum nisl, ac lacinia dolor. Vivamus odio nibh, ullamcorper a maximus eu, fermentum quis justo. Integer elit lacus, commodo quis ante nec, cursus egestas elit. Proin imperdiet turpis massa, eget mollis mi laoreet ut. Aliquam nec iaculis magna. Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p>
-			<p>Mauris sollicitudin ante in scelerisque commodo. Fusce scelerisque ullamcorper nunc, sit amet vulputate dolor iaculis vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin bibendum diam a tincidunt volutpat. Fusce pulvinar velit erat, id euismod est mollis nec. Curabitur ultrices tortor nisi. Sed feugiat massa gravida aliquet suscipit. In luctus tellus magna, eu pellentesque urna ultrices non. Vestibulum sagittis metus arcu, et sollicitudin metus tincidunt fringilla. Etiam tincidunt quam ac placerat malesuada. Praesent vel arcu erat. Nulla at felis libero. Ut odio felis, feugiat in leo ac, consectetur ullamcorper nisl. Praesent tempor posuere bibendum. Cras nisi tellus, imperdiet eu molestie vel, dictum a erat. Fusce sodales ultricies eleifend.</p>
+			<p>Our website is about the abundance of plankton over time across the coast of Australia.
+				</p>
+				<p>Phytoplankton or “plant drifter” is a catch-all category for all the tiny aquatic organisms that can turn sunlight into food via photosynthesis.
+				</p>
+				<p>While zooplankton or “animal drifter” are also an important part to the ocean ecosystem as they feed on phytoplankton then become a food source for larger predators such as fish.
+				</p>
+				<p>Monitoring the plankton population over time is therefore important to sustain life in the oceans and arguably land as well. 
+				Monitoring also provides researchers and policymakers with environmental and climatic indicators, harmful algal bloom detection, eutrophication and pollution information at both local and national scales.
+			</p>
+			
 		</div>
+
 		<div class="col-lg-6">
-			<img src="static/img/plot1.png" class="img-fluid">
+			<img src="static/img/bloom.png" class="img-fluid">
 		</div>
 	
 	</div>
