--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,6 @@
 	<link href="../static/style.css" rel="stylesheet">
 </head>
 <body>
-
 <!-- Navigation -->
 <!-- <div id="map"></div> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
@@ -209,13 +208,15 @@
 	crossorigin=""></script>
   <!-- D3 CDN -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
+  <!-- Plotly -->
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	<!-- Leaflet heatmap plugin-->
   <script type="text/javascript" src="../static/js/leaflet-heat.js"></script>
   <!-- API key -->
   <script type="text/javascript" src="../static/js/config.js"></script>
   <!-- JS -->
   <script type="text/javascript" src="../static/js/Plankton.js"></script>
-
+  <script type="text/javascript" src="../static/js/barplot.js"></script>
 
   <script
   src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
