--- a/templates/visualisations.html
+++ b/templates/visualisations.html
@@ -13,7 +13,6 @@
 <body>
 
 <!-- Navigation -->
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
 	<a class="navbar-brand" href="/"><img src="static/img/logo.png"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,13 +50,26 @@
 <div class="container-fluid padding">
 <div class="row padding">
 	<div class="col-md-12 col-lg-6">
-		<h2>Plot 1</h2>
+		<h2>CPR Plot</h2>
 		<br>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum orci et sapien consequat, eu cursus enim blandit. Quisque mattis eget sapien id pulvinar. Nulla vitae interdum nisl, ac lacinia dolor. Vivamus odio nibh, ullamcorper a maximus eu, fermentum quis justo. Integer elit lacus, commodo quis ante nec, cursus egestas elit. Proin imperdiet turpis massa, eget mollis mi laoreet ut. Aliquam nec iaculis magna. Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p>
-		<p>Mauris sollicitudin ante in scelerisque commodo. Fusce scelerisque ullamcorper nunc, sit amet vulputate dolor iaculis vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin bibendum diam a tincidunt volutpat. Fusce pulvinar velit erat, id euismod est mollis nec. Curabitur ultrices tortor nisi. Sed feugiat massa gravida aliquet suscipit. In luctus tellus magna, eu pellentesque urna ultrices non. Vestibulum sagittis metus arcu, et sollicitudin metus tincidunt fringilla. Etiam tincidunt quam ac placerat malesuada. Praesent vel arcu erat. Nulla at felis libero. Ut odio felis, feugiat in leo ac, consectetur ullamcorper nisl. Praesent tempor posuere bibendum. Cras nisi tellus, imperdiet eu molestie vel, dictum a erat. Fusce sodales ultricies eleifend.</p>
+		<p>Mauris sollicitudin ante in scelerisque commodo.
+			Fusce scelerisque ullamcorper nunc, sit amet vulputate dolor iaculis vel.
+			 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			  Proin bibendum diam a tincidunt volutpat.
+			   Fusce pulvinar velit erat, id euismod est mollis nec.
+			    Curabitur ultrices tortor nisi. Sed feugiat massa gravida aliquet suscipit.
+				 In luctus tellus magna, eu pellentesque urna ultrices non.
+				  Vestibulum sagittis metus arcu, et sollicitudin metus tincidunt fringilla.
+				   Etiam tincidunt quam ac placerat malesuada. Praesent vel arcu erat.
+				    Nulla at felis libero.
+					 Ut odio felis, feugiat in leo ac, consectetur ullamcorper nisl.
+					  Praesent tempor posuere bibendum. Cras nisi tellus, imperdiet eu molestie vel, dictum a erat.
+					   Fusce sodales ultricies eleifend.</p>
 	</div>
-	<div class="col-lg-6">
-		<img src="static/img/plot1.png" class="img-fluid">
+	<div id="phyto_route_plot" class="col-lg-6">
+		<div id="zoo_route_plot"></div>
+	</div>
 	</div>
 
 </div>
@@ -86,7 +98,8 @@ data-auto-a11y="true"
 ></script>
 <!-- API key -->
 <script type="text/javascript" src="static/js/config.js"></script>
-
+<!-- Plotly -->
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <!-- Leaflet JS -->
 <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
 integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
@@ -94,8 +107,8 @@ crossorigin=""></script>
 <!-- D3 CDN -->
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <!-- JS -->
-<script type="text/javascript" src="static/js/Plankton.js"></script>
-
+<!-- <script type="text/javascript" src="static/js/Plankton.js"></script> -->
+<script type="text/javascript" src="../static/js/barplot.js"></script>
 
 </body>
 </html>
