--- a/templates/visualisations.html
+++ b/templates/visualisations.html
@@ -49,26 +49,35 @@
 <!--- Two Column Section -->
 <div class="container-fluid padding">
 <div class="row padding">
-	<div class="col-md-12 col-lg-6">
-		<h2>CPR Plot</h2>
+	<div class="col-md-12 col-lg-4">
+		<h1>CPR Plots</h1>
 		<br>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum orci et sapien consequat, eu cursus enim blandit. Quisque mattis eget sapien id pulvinar. Nulla vitae interdum nisl, ac lacinia dolor. Vivamus odio nibh, ullamcorper a maximus eu, fermentum quis justo. Integer elit lacus, commodo quis ante nec, cursus egestas elit. Proin imperdiet turpis massa, eget mollis mi laoreet ut. Aliquam nec iaculis magna. Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p>
-		<p>Mauris sollicitudin ante in scelerisque commodo.
-			Fusce scelerisque ullamcorper nunc, sit amet vulputate dolor iaculis vel.
-			 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			  Proin bibendum diam a tincidunt volutpat.
-			   Fusce pulvinar velit erat, id euismod est mollis nec.
-			    Curabitur ultrices tortor nisi. Sed feugiat massa gravida aliquet suscipit.
-				 In luctus tellus magna, eu pellentesque urna ultrices non.
-				  Vestibulum sagittis metus arcu, et sollicitudin metus tincidunt fringilla.
-				   Etiam tincidunt quam ac placerat malesuada. Praesent vel arcu erat.
-				    Nulla at felis libero.
-					 Ut odio felis, feugiat in leo ac, consectetur ullamcorper nisl.
-					  Praesent tempor posuere bibendum. Cras nisi tellus, imperdiet eu molestie vel, dictum a erat.
-					   Fusce sodales ultricies eleifend.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			Maecenas fermentum orci et sapien consequat, eu cursus enim blandit.
+			Quisque mattis eget sapien id pulvinar. Nulla vitae interdum nisl,
+			ac lacinia dolor. Vivamus odio nibh, ullamcorper a maximus eu, fermentum quis justo.
+			Integer elit lacus, commodo quis ante nec, cursus egestas elit.
+			Proin imperdiet turpis massa, eget mollis mi laoreet ut. Aliquam nec iaculis magna.
+			Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			Maecenas fermentum orci et sapien consequat, eu cursus enim blandit.
+			Quisque mattis eget sapien id pulvinar. Nulla vitae interdum nisl,
+			ac lacinia dolor. Vivamus odio nibh, ullamcorper a maximus eu, fermentum quis justo.
+			Integer elit lacus, commodo quis ante nec, cursus egestas elit.
+			Proin imperdiet turpis massa, eget mollis mi laoreet ut. Aliquam nec iaculis magna.
+			Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				Maecenas fermentum orci et sapien consequat, eu cursus enim blandit.
+				Quisque mattis eget sapien id pulvinar. Nulla vitae interdum nisl,
+				ac lacinia dolor. Vivamus odio nibh, ullamcorper a maximus eu, fermentum quis justo.
+				Integer elit lacus, commodo quis ante nec, cursus egestas elit.
+			Proin imperdiet turpis massa, eget mollis mi laoreet ut. Aliquam nec iaculis magna.
+			Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p>
+
 	</div>
-	<div id="phyto_route_plot" class="col-lg-6">
-		<div id="zoo_route_plot"></div>
+	<div id="phyto_route_plot" class="col-lg-4">			
+	</div>
+	<div id="zoo_route_plot" class="col-lg-4">			
 	</div>
 	</div>
 
