updated route graphs

--- a/templates/visualisations.html
+++ b/templates/visualisations.html
@@ -47,36 +47,36 @@
 
 
 <!--- Two Column Section -->
+
 <div class="container-fluid padding">
+
 <div class="row padding">
-	<div class="col-md-12 col-lg-4">
-		<h1>CPR Plots</h1>
+	
+	<div class="col-md-12 col-lg-3">
+		<h1>CPR Route Plots </h1>
 		<br>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Maecenas fermentum orci et sapien consequat, eu cursus enim blandit.
-			Quisque mattis eget sapien id pulvinar. Nulla vitae interdum nisl,
-			ac lacinia dolor. Vivamus odio nibh, ullamcorper a maximus eu, fermentum quis justo.
-			Integer elit lacus, commodo quis ante nec, cursus egestas elit.
-			Proin imperdiet turpis massa, eget mollis mi laoreet ut. Aliquam nec iaculis magna.
-			Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Maecenas fermentum orci et sapien consequat, eu cursus enim blandit.
-			Quisque mattis eget sapien id pulvinar. Nulla vitae interdum nisl,
-			ac lacinia dolor. Vivamus odio nibh, ullamcorper a maximus eu, fermentum quis justo.
-			Integer elit lacus, commodo quis ante nec, cursus egestas elit.
-			Proin imperdiet turpis massa, eget mollis mi laoreet ut. Aliquam nec iaculis magna.
-			Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		<p>Phytoplankton or “plant drifter” is a catch-all category for all the tiny aquatic organisms that can turn sunlight into food via photosynthesis. While zooplankton or “animal drifter” are also an important part to the ocean ecosystem as they feed on phytoplankton then become a food source for larger predators such as fish. A lack of either type of plankton can create an imbalance in the ecosystem having devastating effects like algae bloom, low biodiversity or high carbon dioxide levels. Therefore there is an importance to monitor (and visualise!) the populations of these creatures over time to establish any possible alarming trends that need to be addressed.
+			 </p>
+		<p>Places with varying ecological systems and climates, ofcourse, have different degrees of expected hospitality towards reproduction and growth of phyto and zooplankton. With the latter relying on the former in the biological food chain. One of our best methods of monitoring the trends of population is plotting is then done by grouping observations by Continuous Plankton Tracker routes. With each having their own fixed range of coordinates that they regularly over time. Letting us more easily localise trends and give a more precise response.
+
+		</p>
+			<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 				Maecenas fermentum orci et sapien consequat, eu cursus enim blandit.
 				Quisque mattis eget sapien id pulvinar. Nulla vitae interdum nisl,
 				ac lacinia dolor. Vivamus odio nibh, ullamcorper a maximus eu, fermentum quis justo.
 				Integer elit lacus, commodo quis ante nec, cursus egestas elit.
 			Proin imperdiet turpis massa, eget mollis mi laoreet ut. Aliquam nec iaculis magna.
-			Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p>
+			Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p> -->
 
-	</div>
+	</div
+>        <div class="well" class="col-lg-1" style="background-color:white;">
+		<h5>Year:</h5>
+		<select  id="selDataset" onchange="optionChanged(this.value)">
+		</select>  
+	  </div>
 	<div id="phyto_route_plot" class="col-lg-4">			
 	</div>
+
 	<div id="zoo_route_plot" class="col-lg-4">			
 	</div>
 	</div>
