--- a/templates/map.html
+++ b/templates/map.html
@@ -28,8 +28,8 @@
 				Visualisations
 			  </a>
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-				<a class="dropdown-item" href="visualisations.html">Max Temperature</a>
-				<a class="dropdown-item" href="visualisations.html">Humidity</a>
+				<a class="dropdown-item" href="visualisations.html">Bar Plots</a>
+				<a class="dropdown-item" href="boxplots.html">Box Plot</a>
 				<a class="dropdown-item" href="visualisations.html">Cloudiness</a>
 				<a class="dropdown-item" href="visualisations.html">Wind Speed</a>
 			  </div>
