--- a/templates/visualisations.html
+++ b/templates/visualisations.html
@@ -25,8 +25,8 @@
 				Visualisations
 			  </a>
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-				<a class="dropdown-item" href="visualisations.html">Max Temperature</a>
-				<a class="dropdown-item" href="visualisations.html">Humidity</a>
+				<a class="dropdown-item" href="visualisations.html">Bar Plots</a>
+				<a class="dropdown-item" href="boxplots.html">Box Plot</a>
 				<a class="dropdown-item" href="visualisations.html">Cloudiness</a>
 				<a class="dropdown-item" href="visualisations.html">Wind Speed</a>
 			  </div>
@@ -55,9 +55,9 @@
 	<div class="col-md-12 col-lg-3">
 		<h1>CPR Route Plots </h1>
 		<br>
-		<p>Phytoplankton or “plant drifter” is a catch-all category for all the tiny aquatic organisms that can turn sunlight into food via photosynthesis. While zooplankton or “animal drifter” are also an important part to the ocean ecosystem as they feed on phytoplankton then become a food source for larger predators such as fish. A lack of either type of plankton can create an imbalance in the ecosystem having devastating effects like algae bloom, low biodiversity or high carbon dioxide levels. Therefore there is an importance to monitor (and visualise!) the populations of these creatures over time to establish any possible alarming trends that need to be addressed.
+		<p id="vis_p1">
 			 </p>
-		<p>Places with varying ecological systems and climates, ofcourse, have different degrees of expected hospitality towards reproduction and growth of phyto and zooplankton. With the latter relying on the former in the biological food chain. One of our best methods of monitoring the trends of population is plotting is then done by grouping observations by Continuous Plankton Tracker routes. With each having their own fixed range of coordinates that they regularly over time. Letting us more easily localise trends and give a more precise response.
+		<p id="vis_p2">
 
 		</p>
 			<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
