--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,8 @@
 				Visualisations
 			  </a>
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-				<a class="dropdown-item" href="visualisations.html">Max Temperature</a>
-				<a class="dropdown-item" href="visualisations.html">Humidity</a>
+				<a class="dropdown-item" href="visualisations.html">Bar Plots</a>
+				<a class="dropdown-item" href="boxplots.html">Box Plot</a>
 				<a class="dropdown-item" href="visualisations.html">Cloudiness</a>
 				<a class="dropdown-item" href="visualisations.html">Wind Speed</a>
 			  </div>
@@ -72,7 +72,7 @@
 		  </div>
 	  </div>
 	  <div class="carousel-item">
-		<a href="/about" target="_self">
+		<a href="/about.html" target="_self">
 		<img class="d-block w-100" src="static/img/bloom.png" alt="Third slide">
 		<div class="carousel-caption d-none d-md-block">
 			<h3>About</h3>
@@ -95,7 +95,7 @@
 <div class="container-fluid">
 	<div class="row jumbotron">
 		<div class="col-xs-12 col-sm-12 col-md-9 col-log-9 col-xl-10">
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum orci et sapien consequat, eu cursus enim blandit. Quisque mattis eget sapien id pulvinar. Nulla vitae interdum nisl, ac lacinia dolor. Vivamus odio nibh, ullamcorper a maximus eu, fermentum quis justo. Integer elit lacus, commodo quis ante nec, cursus egestas elit. Proin imperdiet turpis massa, eget mollis mi laoreet ut. Aliquam nec iaculis magna. Aenean commodo et elit in sodales. Donec a enim finibus, congue risus a, ultricies diam.</p>
+			<p class="lead">Hello, welcome to our site! Feel free to scroll down, or utilize the navbar above, to navigate our website. Learn more about our motivations, the importance of the oceanic ecosystem to all of us and of course visuals that monitor the trends that can effect it. </p>
 		
 		</div>
 	</div>
@@ -141,13 +141,21 @@
 			<i class="fas fa-map-marker-alt"></i>
 			<h3>LEAFLET</h3>
 		</div>
+		<div class="col-xs-12 col-sm-6 col-md-6">
+			<i class="fas fa-drafting-compass"></i>
+			<h3>Flask</h3>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-6">
+			<i class="fas fa-drafting-compass"></i>
+			<h3>Plotly</h3>
+		</div>
 	</div>
 <hr class="my-4">
 </div>
 
 
 <!--- Two Column Section -->
-<div class="container-fluid padding">
+<!-- <div class="container-fluid padding">
 <div class="row padding">
 	<div class="col-md-12 col-lg-6">
 		<h2>Plot 1</h2>
@@ -162,10 +170,10 @@
 </div>
 </div>
 
-<hr class="my-4">
+<hr class="my-4"> -->
   
 <!--- Meet the team -->
-<div class="container-fluid padding">
+<!-- <div class="container-fluid padding">
 	<div class="row welcome text-center">
 		<div class="col-12">
 			<h1 class="display-4">About</h1>
@@ -185,7 +193,7 @@
 		</div>
 	
 	</div>
-	</div>
+	</div> -->
 
 
 <!--- Footer -->
