final push: website updated + new plot

--- a/templates/boxplots.html
+++ b/templates/boxplots.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Visualisations - Phyto Data App</title>
+	<title>Boxplots - Phyto Data App</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 	<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
@@ -27,8 +27,7 @@
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 				<a class="dropdown-item" href="visualisations.html">Bar Plots</a>
 				<a class="dropdown-item" href="boxplots.html">Box Plot</a>
-				<a class="dropdown-item" href="visualisations.html">Cloudiness</a>
-				<a class="dropdown-item" href="visualisations.html">Wind Speed</a>
+				<a class="dropdown-item" href="radarplot.html">Radar Plot</a>
 			  </div>
 		  </li>
 		<li class="nav-item">
@@ -115,5 +114,3 @@ crossorigin=""></script>
 
 
 
-
-<!-- End View in Browser: Drew's #1 Trending YouTube Tutorial -->
