--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,7 @@
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 				<a class="dropdown-item" href="visualisations.html">Bar Plots</a>
 				<a class="dropdown-item" href="boxplots.html">Box Plot</a>
-				<a class="dropdown-item" href="visualisations.html">Cloudiness</a>
-				<a class="dropdown-item" href="visualisations.html">Wind Speed</a>
+				<a class="dropdown-item" href="radarplot.html">Radar Plot</a>
 			  </div>
 		  </li>
 		<li class="nav-item">
@@ -76,7 +75,7 @@
 		<img class="d-block w-100" src="static/img/bloom.png" alt="Third slide">
 		<div class="carousel-caption d-none d-md-block">
 			<h3>About</h3>
-			<p style="color:white">Meet our Team and our mission!</p>
+			<p style="color:white">About Phytoplankton...</p>
 		</a>
 		  </div>
 	  </div>
@@ -109,7 +108,7 @@
 		</div>
 		<hr>
 		<div class="col-12">
-			<p class="lead">For this project, we used Python flask, powered API, HTML/CSS, JavaScript, Leaflet, Plotly and Bootstrap</p>
+			<p class="lead">For this project, we used Python flask, powered API, HTML/CSS, JavaScript, Leaflet, Plotly, Chart.js and Bootstrap</p>
 		</div>
 	</div>
 </div>
@@ -240,6 +239,6 @@
 
 
 
-<!-- End View in Browser: Drew's #1 Trending YouTube Tutorial -->
+
 
 
