--- a/templates/map.html
+++ b/templates/map.html
@@ -30,8 +30,7 @@
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 				<a class="dropdown-item" href="visualisations.html">Bar Plots</a>
 				<a class="dropdown-item" href="boxplots.html">Box Plot</a>
-				<a class="dropdown-item" href="visualisations.html">Cloudiness</a>
-				<a class="dropdown-item" href="visualisations.html">Wind Speed</a>
+				<a class="dropdown-item" href="radarplot.html">Radar Plot</a>
 			  </div>
 		  </li>
 		<li class="nav-item">
@@ -89,10 +88,5 @@ data-auto-a11y="true"
 </body>
 </html>
 
-
-
-
-
-<!-- End View in Browser: Drew's #1 Trending YouTube Tutorial -->
 
 
