--- a/templates/radarplot.html
+++ b/templates/radarplot.html
@@ -3,17 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>About - Phyto Data App</title>
+	<title>Radar Plot - Phyto Data App</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 	<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
 	<!-- <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> -->
 	<link href="../static/style.css" rel="stylesheet">
+	<!-- Charts JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.min.js" integrity="sha512-5vwN8yor2fFT9pgPS9p9R7AszYaNn0LkQElTXIsZFCL7ucT8zDCAqlQXDdaqgA1mZP47hdvztBMsIoFxq/FyyQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
 
 <!-- Navigation -->
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
 	<a class="navbar-brand" href="/"><img src="static/img/logo.png"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,6 +30,7 @@
 				<a class="dropdown-item" href="visualisations.html">Bar Plots</a>
 				<a class="dropdown-item" href="boxplots.html">Box Plot</a>
 				<a class="dropdown-item" href="radarplot.html">Radar Plot</a>
+				
 			  </div>
 		  </li>
 		<li class="nav-item">
@@ -47,32 +49,30 @@
 
 
 <!--- Two Column Section -->
+
 <div class="container-fluid padding">
-	<div class="row padding">
-		<div class="col-md-12 col-lg-6">
-			<h2>About</h2>
-			<br>
-			<p>Our website is about the abundance of plankton over time across the coast of Australia.
-			</p>
-			<p>Phytoplankton or “plant drifter” is a catch-all category for all the tiny aquatic organisms that can turn sunlight into food via photosynthesis.
-			</p>
-			<p>While zooplankton or “animal drifter” are also an important part to the ocean ecosystem as they feed on phytoplankton then become a food source for larger predators such as fish.
-			</p>
-			<p>Monitoring the plankton population over time is therefore important to sustain life in the oceans and arguably land as well. 
-			Monitoring also provides researchers and policymakers with environmental and climatic indicators, harmful algal bloom detection, eutrophication and pollution information at both local and national scales.
-		</p>
+
+<div class="row padding">
+	
+	<div class="col-12 text-center">
+		<h1>Taxonomy Group Volumes </h1>
+		<br>
+
+			<p>On the following plot, we can quickly observe that the two most represented groups of phytoplankton are <a href="https://en.wikipedia.org/wiki/Diatom#:~:text=Centric%20diatoms%20are%20radially%20symmetric,content%20over%20the%20diatoms%20progression.">'Centric Diatom'</a> and <a href='https://diatoms.org/glossary/pennate'>'Pennate Diatom'</a>, with respectively a volume of 170,838,752m3 and 167,181,549m3 around the Australian Coast.</p>
+
+            <br>
+            <br>
+
+
+	<!-- Chart.js -->
+	<div class="container">
+		<canvas id="myChart" width="400" height="400"></canvas>
+		<script type="text/javascript" src="../static/js/chartjs.js"></script>
 		
 	</div>
-	
-	<div class="col-lg-6">
-		<br>
-		<br>
-		<br>
-		<img src="static/img/bloom.png" class="img-fluid">
-	</div>
-	
-	</div>
-	</div>
+
+</div>
+</div>
 
 <hr class="my-4">
   
@@ -95,34 +95,22 @@
 src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
 data-auto-a11y="true"
 ></script>
-
-<!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
-  integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
-  crossorigin=""></script>
-<!-- D3 CDN -->
-<script src="https://d3js.org/d3.v5.min.js"></script>
-  <!-- Leaflet heatmap plugin-->
-<script type="text/javascript" src="../static/js/leaflet-heat.js"></script>
 <!-- API key -->
-<script type="text/javascript" src="../static/js/config.js"></script>
+<script type="text/javascript" src="static/js/config.js"></script>
+<!-- Plotly -->
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<!-- Leaflet JS -->
+<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+crossorigin=""></script>
+<!-- D3 CDN -->
+<script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
 <!-- JS -->
-<script type="text/javascript" src="../static/js/Plankton.js"></script>
-
-
-<script
-src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
-data-auto-a11y="true"
-></script>
-<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
-
-
-
+<!-- <script type="text/javascript" src="static/js/Plankton.js"></script> -->
+<script type="text/javascript" src="../static/js/barplot.js"></script>
 
 </body>
 </html>
-
-
 
 
 
