--- a/templates/sources.html
+++ b/templates/sources.html
@@ -28,8 +28,7 @@
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 				<a class="dropdown-item" href="visualisations.html">Bar Plots</a>
 				<a class="dropdown-item" href="boxplots.html">Box Plot</a>
-				<a class="dropdown-item" href="visualisations.html">Cloudiness</a>
-				<a class="dropdown-item" href="visualisations.html">Wind Speed</a>
+				<a class="dropdown-item" href="radarplot.html">Radar Plot</a>
 			  </div>
 		  </li>
 		<li class="nav-item">
@@ -52,6 +51,7 @@
 <div class="row padding">
 	<div class="col-md-12 col-lg-6">
 		<h2>Sources</h2>
+		<br>
 		<p>After crawling the web for phytopankton data sources, we decided to focus on data provided by the <a href="https://portal.aodn.org.au/">Australian Ocean Data Network</a>.
 			It gives an open access to ocean data with very interesting parameters, like latitude and longitude, but also dates and volumes.
 		</p>
@@ -118,8 +118,5 @@
 
 
 
-
-
-<!-- End View in Browser: Drew's #1 Trending YouTube Tutorial -->
 
 
