--- a/templates/visualisations.html
+++ b/templates/visualisations.html
@@ -9,6 +9,8 @@
 	<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
 	<!-- <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> -->
 	<link href="../static/style.css" rel="stylesheet">
+	<!-- Charts JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.min.js" integrity="sha512-5vwN8yor2fFT9pgPS9p9R7AszYaNn0LkQElTXIsZFCL7ucT8zDCAqlQXDdaqgA1mZP47hdvztBMsIoFxq/FyyQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
 
@@ -27,8 +29,7 @@
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 				<a class="dropdown-item" href="visualisations.html">Bar Plots</a>
 				<a class="dropdown-item" href="boxplots.html">Box Plot</a>
-				<a class="dropdown-item" href="visualisations.html">Cloudiness</a>
-				<a class="dropdown-item" href="visualisations.html">Wind Speed</a>
+				<a class="dropdown-item" href="radarplot.html">Radar Plot</a>
 			  </div>
 		  </li>
 		<li class="nav-item">
@@ -81,6 +82,7 @@
 	</div>
 	</div>
 
+
 </div>
 </div>
 
@@ -114,7 +116,7 @@ data-auto-a11y="true"
 integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
 crossorigin=""></script>
 <!-- D3 CDN -->
-<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
 <!-- JS -->
 <!-- <script type="text/javascript" src="static/js/Plankton.js"></script> -->
 <script type="text/javascript" src="../static/js/barplot.js"></script>
@@ -124,8 +126,5 @@ crossorigin=""></script>
 
 
 
-
-
-<!-- End View in Browser: Drew's #1 Trending YouTube Tutorial -->
 
 
